add build script for linux